--- a/Homework/relaxr/css/style.css
+++ b/Homework/relaxr/css/style.css
@@ -1,7 +1,7 @@
 /*
 Project Name: Blank Template
 Client: Your Client
-Author: Your Name
+Author: Joseph Kaplan
 Developer @GA in NYC
 */
 
@@ -17,30 +17,6 @@ Developer @GA in NYC
      box-sizing: border-box; /* IE */
 }
 
-/* Clear fix hack */
-.clearfix:after {
-     content: ".";
-     display: block;
-     clear: both;
-     visibility: hidden;
-     line-height: 0;
-     height: 0;
-}
-
-.clear {
-  clear: both;
-}
-
-.alignright {
-  float: right;
-  padding: 0 0 10px 10px; /* note the padding around a right floated image */
-}
-
-.alignleft {
-  float: left;
-  padding: 0 10px 10px 0; /* note the padding around a left floated image */
-}
-
 /******************************************
 /* BASE STYLES
 /*******************************************/
@@ -50,8 +26,10 @@ body {
      font-size: 12px;
      line-height: 1.4;
      font-family: Helvetica, Arial, sans-serif;
-     background: url(../images/header_bg.jpg) no-repeat center top rgb(134,141,157);
-      background-size: cover;
+     margin: 0;
+     overflow-x: hidden;
+/*      background: url("http://res.cloudinary.com/jkeohan/image/upload/v1509050166/header_bg_f5pvpn.jpg") no-repeat center top rgb(134,141,157);
+      background-size: cover; */
 }
 
 
@@ -60,19 +38,199 @@ body {
 /*******************************************/
 
 /* Center the container */
-#container {
-  width: 100%;
-  margin: auto;
-  height: 500px;
-
+.container {
+/*   width: 100%;
+  margin: auto; */
+/*   height: 500px;
+ */
 }
 
 header {
+  background: url("http://res.cloudinary.com/jkeohan/image/upload/v1509050166/header_bg_f5pvpn.jpg") no-repeat center top rgb(134,141,157);
+  background-size: cover;
+  display: block;
+/*   margin: -8px; */
+}
+
+/* .image-header {
+  position: relative;
+  display: block;
+  width: 100%;
+  background-size: cover;
+/*   padding: 0;
+  border: 0;
+  margin: -4px;
+   */
+}
+
+header {
+  display: block;
+}
+
+h1 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: extra bold;
+  font-size: 24px;
+  color: white;
+  display: inline-block;
+  margin: 6px 0 0 62px;
+  padding: 10px 0 0 10px;
+  border: 0;
+  
+}
+
+h2 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+  Color: white;
+  font-size: 24px;
+  text-align: center;
+  margin: 60px 0 0 0;  
+  padding: 10px 0 0 0;
+}
+
+.button1 {
+  display: inline-block;
+  margin: 30px auto 180px 50%;
+  background-color: #f9e42e;
+  border: none;
+  padding: 7.5px 30px;
+  border-radius: 5px;
+  font-size: 14px;
+  font-family: 'Open Sans', Sans-Serif;
+  Font-weight: 800;
+  text-align: center;
+  transform: translateX(-50%); 
+/*   Removes 50% of element's width */
+}
+
+.benefits {
+  background-color: #f0efef;
+  display: block;
+  margin: 0;
+}
+
+.benefits-text {
+  padding: 60px 0 18px 72px;
+  max-width: 375px;
+  font-family: 'Open Sans', Sans-Serif;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.benefits p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 13px;
+  font-weight: 300;
+  color: #121212;
+}
+
+ul {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 13px;
+  font-weight: 300;
+  color: #121212;
+  padding: 15px 15px 0 60px;
+}
+
+li {
+  padding: 4px 0;
+}
+
+.quotes {
+    background: url(http://res.cloudinary.com/jkeohan/image/upload/v1509050227/testimonial_bg_rd59w7.jpg) no-repeat center top rgb(134,141,157);
+  background-size: cover;
+  display: block;
+  margin: -18px 0;
+/*   margin-align: top; */
+}
+
+.quotes-text {
+  max-width: 300px;
+  font-weight: 300i;
+  margin: 0 auto;
+}
+
+.quotes-text p {
+  color: #606161;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+  font-weight: light;
+  font-style: italic;
+  padding: 30px 0;
+}
+
+span {
+  color: white;
+  font-weight: 600;
+  font-style: normal;
+  line-height: 2em;
+}
+
+.sign-up-now {
+  background-color: #f9e42e;
+  margin: -18px -8px;
+}
+
+.button2 {
+  display: inline-block;
+  margin: 20px auto 20px 50%; 
+  background-color: #033048;
+  color: white;
+  border: none;
+  padding: 7.5px 30px;
+  border-radius: 5px;
+  font-size: 12px;
+  font-family: 'Open Sans', Sans-Serif;
+  Font-weight: 800;
+  text-align: center;
+  transform: translateX(-50%); 
+/*   Removes 50% of element's width */
 
 }
 
 footer {
+  background-color: #121212;
+  margin: 18px -8px 0 0;
+  display: block;
+}
 
+.footer-copy {
+  padding: 10px 10px 20px 10px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+h4 {
+  font-family: 'Open Sans', sans-serif;
+  color: #f9e42e;
+  font-size: 24px;
+  font-weight: 800;
+}
+
+.footer-copy p {
+  color: white;
+  font-size: 9px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+}
+
+a {
+  text-decoration: none;
+}
+
+.social-logos img {
+  margin: -10px 10px 15px 10px;
+  text-decoration: none;
+}
+
+.social-logos .facebook {
+  width: 7.5px;
+}
+
+.social-logos .twitter {
+  width: 19.5px;
 }
 
 /******************************************
